--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                  <div class="card_data">
                     <h3 class="card_name">Missingo</h3>
                     <p class="card_description">
-                      This is our inaugural affectionately known as 'Missingo,' much more than a mere dwelling, holds a special place in our hearts as it serves as a dedicated haven for a myriad of testing endeavors.
+                      This is 'Missingo, The first home in the table saying brief hobbies about me.
                     </p>
-                    <a href="https://missingo.ya-ya.tech/" class="card_button">Check Home</a>
+                    <a href="https://missingo.ya-ya.tech/" class="card_button">🧪 Check Home</a>
                  </div>
               </section>
               <!-- Repeat similar sections for other cards -->
@@ -45,9 +45,9 @@
                 <div class="card_data">
                    <h3 class="card_name">Cooker Cove	</h3>
                    <p class="card_description">
-                    TerraHomes is your trusted partner for finding the perfect home. 
+                    A Home Where I show you our Tunisian Food. Come Visit and Taste this! 
                    </p>
-                   <a href="https://cooker-cove.ya-ya.tech/" class="card_button">Check Home</a>
+                   <a href="https://cooker-cove.ya-ya.tech/" class="card_button">🍳 Check Home</a>
                 </div>
              </section>
               <!-- ... (other cards content) ... -->
@@ -58,9 +58,9 @@
                 <div class="card_data">
                    <h3 class="card_name">Melomaniac Mansion	</h3>
                    <p class="card_description">
-                    We help you discover your dream home with ease.
+                     I love all art and here I show you some of my best Rap Tn. 
                    </p>
-                   <a href="https://melomaniac-mansion.ya-ya.tech/" class="card_button">Check Home</a>
+                   <a href="https://melomaniac-mansion.ya-ya.tech/" class="card_button">🎵 Check Home</a>
                 </div>
              </section>
 
@@ -72,9 +72,9 @@
               <div class="card_data">
                  <h3 class="card_name">Gamers Grotto	</h3>
                  <p class="card_description">
-Enjoy!
+                  I first met my ex german gf on league before she flies to me. Check my game!
                  </p>
-                 <a href="https://gamers-grotto.ya-ya.tech/" class="card_button">Check Home</a>
+                 <a href="https://gamers-grotto.ya-ya.tech/" class="card_button">🎮 Check Home</a>
               </div>
            </section>
 
@@ -85,8 +85,8 @@ Enjoy!
             <div class="card_data">
                <h3 class="card_name">The Nomad Pad</h3>
                <p class="card_description">
-Nice!               </p>
-               <a href="https://the-nomad-pad.ya-ya.tech/" class="card_button">Check Home</a>
+Seven places to change your opinion and get you visit Tunisia.  </p>
+               <a href="https://the-nomad-pad.ya-ya.tech/" class="card_button">📸 Check Home</a>
             </div>
          </section>
 
@@ -97,9 +97,9 @@ Nice!               </p>
           <div class="card_data">
              <h3 class="card_name">Video Valley</h3>
              <p class="card_description">
-Good Homes!
+I watched Breaking bad before my 17 birthday back before 8 of april.
              </p>
-             <a href="https://video-valley.ya-ya.tech/" class="card_button">Check Home</a>
+             <a href="https://video-valley.ya-ya.tech/" class="card_button">📺 Check Home</a>
           </div>
        </section>
             </div>
