TerraSlides Swiper Project

--- a/index.html
+++ b/index.html
@@ -27,79 +27,75 @@
               <!-- Card details -->
               <section class="card_details swiper-slide">
                  <div class="card_img_box">
-                    <img src="assets/"  class="card_img">
                  </div>
                  <div class="card_data">
                     <h3 class="card_name">Missingo</h3>
                     <p class="card_description">
                       This is 'Missingo, The first home in the table saying brief hobbies about me.
                     </p>
-                    <a href="https://missingo.ya-ya.tech/" class="card_button">🧪 Check Home</a>
+                    <a href="https://missingo.ya-ya.tech/" class="card_button">🧪 Check Home 🖱️</a>
                  </div>
               </section>
               <!-- Repeat similar sections for other cards -->
               <section class="card_details swiper-slide">
                 <div class="card_img_box">
-                   <img src="assets/"  class="card_img">
                 </div>
                 <div class="card_data">
                    <h3 class="card_name">Cooker Cove	</h3>
                    <p class="card_description">
                     A Home Where I show you our Tunisian Food. Come Visit and Taste this! 
                    </p>
-                   <a href="https://cooker-cove.ya-ya.tech/" class="card_button">🍳 Check Home</a>
+                   <a href="https://cooker-cove.ya-ya.tech/" class="card_button">🍳 Check Home 🖱️</a>
                 </div>
              </section>
               <!-- ... (other cards content) ... -->
               <section class="card_details swiper-slide">
                 <div class="card_img_box">
-                   <img src="assets/"  class="card_img">
                 </div>
                 <div class="card_data">
                    <h3 class="card_name">Melomaniac Mansion	</h3>
                    <p class="card_description">
                      I love all art and here I show you some of my best Rap Tn. 
                    </p>
-                   <a href="https://melomaniac-mansion.ya-ya.tech/" class="card_button">🎵 Check Home</a>
+                   <a href="https://melomaniac-mansion.ya-ya.tech/" class="card_button">🎵 Check Home 🖱️ </a>
                 </div>
              </section>
 
 
              <section class="card_details swiper-slide">
               <div class="card_img_box">
-                 <img src="assets/"  class="card_img">
+
+                 
               </div>
               <div class="card_data">
                  <h3 class="card_name">Gamers Grotto	</h3>
                  <p class="card_description">
                   I first met my ex german gf on league before she flies to me. Check my game!
                  </p>
-                 <a href="https://gamers-grotto.ya-ya.tech/" class="card_button">🎮 Check Home</a>
+                 <a href="https://gamers-grotto.ya-ya.tech/" class="card_button">🎮 Check Home 🖱️</a>
               </div>
            </section>
 
            <section class="card_details swiper-slide">
             <div class="card_img_box">
-               <img src="assets/"  class="card_img">
             </div>
             <div class="card_data">
                <h3 class="card_name">The Nomad Pad</h3>
                <p class="card_description">
 Seven places to change your opinion and get you visit Tunisia.  </p>
-               <a href="https://the-nomad-pad.ya-ya.tech/" class="card_button">📸 Check Home</a>
+               <a href="https://the-nomad-pad.ya-ya.tech/" class="card_button">📸 Check Home 🖱️</a>
             </div>
          </section>
 
          <section class="card_details swiper-slide">
           <div class="card_img_box">
-             <img src="assets/"  class="card_img">
           </div>
           <div class="card_data">
              <h3 class="card_name">Video Valley</h3>
              <p class="card_description">
 I watched Breaking bad before my 17 birthday back before 8 of april.
              </p>
-             <a href="https://video-valley.ya-ya.tech/" class="card_button">📺 Check Home</a>
+             <a href="https://video-valley.ya-ya.tech/" class="card_button">📺 Check Home 🖱️</a>
           </div>
        </section>
             </div>
